--- a/templates/add.html
+++ b/templates/add.html
@@ -4,6 +4,7 @@
 
     <form class="form" method="POST">
         <textarea class="form__input" id="habit" name="habit" rows="3" placeholder="Add a new daily habit"></textarea>
+        <input type="date" class="form__input" id="date" name="date" required>
         <button class="form__button" type="submit">Add</button>
     </form>
 
