--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,16 +13,16 @@
     
     <body>
         <header class="header">
-            <h1 class="header__logo"><a href="{{ url_for('index') }}" class="header__link">To-Do</a></h1>
+            <h1 class="header__logo"><a href="{{ url_for('to-do.index') }}" class="header__link">To-Do</a></h1>
             {% if "add" not in request.endpoint %}
-                <a href="{{ url_for('add') }}" class="header__link">+ Add new</a>
+                <a href="{{ url_for('to-do.add') }}" class="header__link">+ Add new</a>
             {% endif %}
         </header>
 
         <main class="main">
             <section class="dates">
                 {% for date in date_range(selected_date) %}
-                <a class="dates__link {{ 'dates__link--current' if loop.index0 == 3 else '' }}" href="{{ url_for('index', date=date) }}">
+                <a class="dates__link {{ 'dates__link--current' if loop.index0 == 3 else '' }}" href="{{ url_for('to-do.index', date=date) }}">
                     <time class="date" datetime="{{ date }}">
                         <span>{{ date.strftime("%a") }}</span>
                         <span>{{ date.strftime("%d") }}</span>
