--- a/templates/add.html
+++ b/templates/add.html
@@ -4,8 +4,12 @@
 
     <form class="form" method="POST">
         <textarea class="form__input" id="habit" name="habit" rows="3" placeholder="Add a new daily habit"></textarea>
-        <input type="date" class="form__input" id="date" name="date" required>
-        <button class="form__button" type="submit">Add</button>
+        <input type="date" class="form__input" id="date" name="date" value="{{ selected_date }}" required>
+        <div class="button-container">
+            <button class="form__button" type="submit">Add</button>
+            <a href="{{ url_for('to-do.index') }}" class="home__button">Home</a>
+        </div>
     </form>
+</div>
 
 {% endblock %}
