--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
             <div class="habit">
                 <form method="POST" class="habit__form" action="{{ url_for('to-do.complete') }}">
                     <input type="hidden" id="habitName" name="habitId" value="{{ habit['_id'] }}" />
-                    <input type="hidden" id="date" name="date" value="{{ selected_date.strftime('%Y-%m-%d') }}" />
+                    <input type="hidden" id="date" name="date" value="{{ selected_date }}" />
                     <button type="submit" class="habit__button">
                         {{ habit["name"] }}
                     </button>
